[metadata]
name = irec
version = 1.2.2
author = Heitor Werneck
author_email = werneck@aluno.ufsj.edu.br
description = Reinforcement Learning Recommender System Framework containing Multi-Armed Bandit, Active Learning and others methods for online recommendation
keywords =
   recommender
   recommendation
   reinforcement learning
   machine learning
   framework
   library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/irec
project_urls =
    Bug Tracker = https://github.com/pypa/irec/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
[options]
#package_dir =
   #= irec
packages = find:
python_requires = >=3.6
install_requires =
    joblib
    keras
    matplotlib
    numba
    numpy
    pandas
    scikit-learn
    scipy
    sklearn
    tensorflow
    threadpoolctl>=3.0.0
    tqdm>=4.62.3
[options.packages.find]
#where = irec
exclude =
   app
